Restricted video access

--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -6,3 +6,4 @@
       </tr>
     <% end %>
 <%= link_to 'New Video', new_video_path %>
+<li><%= link_to 'Logout', session_path('dummy'), method: :delete %></li>
