--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,9 +1,27 @@
 <h1>Game Videos</h1>
+
 <% @videos.each do |video| %>
-      <tr>
-        <td class="content"><%= video.title %><%= raw(video.urlLink) %></td>
-        <td><%= link_to 'Delete', video, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <tr>
+    <td class="content"><%= video.title %>
+    </br>
+    <%= raw(video.urlLink) %></td>
+    </br>
+    <td><%= link_to 'Delete', video, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+  </br>
+  <%= form_for(video.comments.build) do |f| %>
+
+      <%= f.label :Comment %><br>
+      <%= f.text_field :comment %>
+      <%= f.hidden_field :video_id %>
+
+      <%= f.submit %>
+
+  <% end %>
+
+<% end %>
+
+</br>
 <%= link_to 'New Video', new_video_path %>
-<li><%= link_to 'Logout', session_path('dummy'), method: :delete %></li>
+<%= link_to 'Logout', session_path('dummy'), method: :delete %>
+
