--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,9 +1,22 @@
 <h1>Comments</h1>
 <% @comments.each do |comment| %>
+</br>
+<div class="line">UserID
+<%= comment.user_id %>
+</div>
+</br>
+<div class="line">VideoID
+<%= comment.video_id %>
+</div>
+</br>
   <tr>
-    <td class="content"><%= comment.comment %></td>
+    <td class="content"><%= comment.comment %><%= link_to 'Delete', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
+</td>
+</br>
+
     <td><%= link_to 'Delete', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
+  </br>
 <% end %>
   <%= link_to 'Comment', new_comment_path %>
 
