--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -9,7 +9,7 @@
   <p>
     <%= f.label :URL %><br>
     <%= f.text_area :urlLink %>
-    <%= f.hidden_field :user_id %>
+    <%= f.hidden_field :user_id , :value => current_user.id %>
 
   </p>
 
