--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+
     <div class="navbar-header">
       <a class="navbar-brand" href="/home">
-        <img alt="Brand" src="...">
+        <img src="http://i.imgur.com/AQOszO0.jpg">
       </a>
       <div class="btn-group">
-        <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Options</button>
+        <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account Options</button>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/login">Login</a>
           </br>
@@ -18,61 +18,62 @@
        <a href="/new_video" class="btn btn-primary btn-lg active" role="button">New Video</a>
       </div>
     </div>
-  </div>
-</nav>
-<% if current_user %>
- <% if notice %>
-  <div id="notice"><%= notice %> <%= current_user.gamertag %></div>
-  <% end %>
-    <div id="notice"><%= 'Welcome' %> <%= current_user.gamertag %></div>
 
+</nav>
+
+<h1>Pwn Zone</h1>
+
+<% if current_user %>
+  <% if notice %>
+    <div id="notice"><%= notice %> <%= current_user.gamertag %></div>
+  <% end %>
+  <div id="notice"><%= 'Welcome back' %> <%= current_user.gamertag %></div>
 <% end %>
-<h1>Game Videos</h1>
 
 <% @videos.reverse_each do |video| %>
   </br>
   <tr>
-    <td class="content"><%= video.title %>
+    <td class="content">
+      <h2><%= video.title %></h2>
+      </br>
+      <% video.urlLink = '<iframe frameborder=0 allowFullScreen scale="tofit" width="640" height="365" style="max-width:100%" src="' + video.urlLink.to_s + '/embed"></iframe>' %>
+      <div class="video_feed"><%= raw(video.urlLink) %></div>
+    </td>
     </br>
-    <% video.urlLink = '<iframe frameborder=0 webkitAllowFullScreen mozallowfullscreen allowFullScreen scale="tofit" width="640" height="365" style="max-width:100%" src="' + video.urlLink.to_s + '/embed"></iframe>' %>
-    <%= raw(video.urlLink) %></td>
-    </br>
-    Pwn by <%= video.user.gamertag %>
-    </br>
-  <% if current_user %>
-    <% if (video.user.gamertag == current_user.gamertag) %>
-      <td>
-      <%= link_to 'Delete', video, method: :delete, data: { confirm: 'Are you sure?' } %>
-      </td>
-    <% end %>
-  <% end %>
-
+    <div class="video_user_sig">Pwn by <%= video.user.gamertag %></div>
+    <div class="video_function">
+      <% if current_user %>
+        <% if (video.user.gamertag == current_user.gamertag) %>
+          <td>
+          <%= link_to 'Delete', video, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </td>
+        <% end %>
+      <% end %>
+    </div>
   </tr>
+
   </br>
   <% video.comments.each do |comment| %>
     </br>
-    Comment by <%= comment.user.gamertag %>
-    </br>
-    <td class="content"><%= comment.comment %></td>
-    <td>
+    <div class="user_comment">Comment by <%= comment.user.gamertag %></div>
+
+    <div class="comment_feed"><%= comment.comment %></div>
+    <div class="comment_functions">
       <% if current_user %>
         <% if (comment.user.gamertag == current_user.gamertag)%>
           <%= link_to 'Edit', edit_comment_path(comment) %>
           <%= link_to 'Delete', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
         <% end %>
       <% end %>
+      </div>
     <% end %>
-    </td>
-  <%= form_for(video.comments.build) do |f| %>
-      <%= f.label :Comment %><br>
-      <%= f.text_field :comment %>
-      <%= f.hidden_field :video_id %>
-      <%= f.submit %>
-  <% end %>
 
-
+  <div class="comment_box">
+    <%= form_for(video.comments.build) do |f| %>
+        <%= f.label :Comment %><br>
+        <%= f.text_field :comment %>
+        <%= f.hidden_field :video_id %>
+        <%= f.submit %>
+    <% end %>
+  </div>
 <% end %>
-
-</br>
-
-
