--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -20,7 +20,7 @@
     </div>
 
 </nav>
-
+<body class="main_page">
 <h1>Pwn Zone</h1>
 
 <% if current_user %>
@@ -77,3 +77,4 @@
     <% end %>
   </div>
 <% end %>
+</body>
