--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -5,7 +5,7 @@
         <img src="http://i.imgur.com/AQOszO0.jpg">
       </a>
       <div class="btn-group">
-        <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account Options</button>
+        <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account Options</button>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/login">Login</a>
           </br>
@@ -15,7 +15,7 @@
         </div>
       </div>
       <div class="btn-group">
-       <a href="/new_video" class="btn btn-primary btn-lg active" role="button">New Video</a>
+       <a href="/new_video" class="btn btn-secondary btn-lg active" role="button">New Video</a>
       </div>
     </div>
 
