--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.register {
+  margin: 0 auto;
+  border: 5px solid #4b3947;
+  max-width: 320px;
+  word-wrap:break-word;
+  color: white;
+  background-color: grey;
+
+}
+
+.text_box{
+  text-align: center;
+  margin:0px auto;
+  color: black;
+
+}
+
+.submit{
+   text-align: center;
+   margin-bottom: 10px;
+   color: black;
+
+}
+
+.text {
+  text-align: center;
+}
