--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
 <h1>Welcome to PwnHub!</h1>
+<body class="main_page">
+<div id="trans">
 <%= link_to 'Click here to enter', root_path %>
+</div>
+</body>
 
