--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-default">
     <div class="navbar-header">
       <a class="navbar-brand" href="/home">
@@ -18,9 +19,21 @@
       </div>
     </div>
 </nav>
-
+<header class"top">
+</header>
 <body class="main_page">
-  <h1>Pwn Zone</h1>
+<div class="background" style="position: fixed; z-index: -99; width: 100%; height: 100%">
+
+<iframe id="ytplayer" type="text/html" width="100%" height="100%"
+  src="http://www.youtube.com/embed/G2lAevT97_4?autoplay=1&loop=1&playlist=Ts8yoDP_gG4"
+  frameborder="0" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true">
+
+</iframe>
+
+
+</div>
+
+  <h1>The Latest PWNs</h1>
 
   <% if current_user %>
     <% if notice %>
@@ -80,3 +93,4 @@
     </div>
   <% end %>
 </body>
+
