--- a/app/views/videos/new.html.erb
+++ b/app/views/videos/new.html.erb
@@ -1,17 +1,24 @@
-<h1>New Video</h1>
 
-<%= form_for(@video) do |f| %>
-  <p>
-    <%= f.label :Title %><br>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :URL %><br>
-    <%= f.text_area :urlLink %>
-    <%= f.hidden_field :user_id %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-<%= link_to 'Back', root_path %>
+<nav class="navbar navbar-default">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/home">
+        <img src="http://i.imgur.com/AQOszO0.jpg">
+      </a>
+    </div>
+</nav>
+
+<h1>Submit your greatest PWN!</h1>
+<body class="main_page">
+  <%= form_for(@video) do |f| %>
+    <div class="register">
+      <div class="text"><%= f.label :Title %></div>
+      <div class="text_box"><%= f.text_field :title %></div>
+
+      <div class="text"><%= f.label :URL %></div>
+      <div class="text_box"><%= f.text_area :urlLink %></div>
+      <%= f.hidden_field :user_id %>
+
+      <div class="submit"><%= f.submit %></div>
+    </div>
+  <% end %>
+</body>
