--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,17 @@
-<h1>Welcome to PwnHub!</h1>
+<h1 class="show_user">WELCOME TO!</h1>
+</br>
 <body class="main_page">
-<div id="trans">
-<%= link_to 'Click here to enter', root_path %>
+  <a class="home" href="/home">
+    <img src="http://i.imgur.com/AQOszO0.jpg">
+  </a>
+  </br>
+<h2 class="guideline">Guidlines</h2>
+
+<div class="sum">Grab your best clips on the Xbox DVR website, and brag about your epic PWNge.
+Copy the URL from the video you want to show off. Now let's see those moments.
+Click the hub link to get started
 </div>
+
+
 </body>
 
