--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -19,19 +19,15 @@
       </div>
     </div>
 </nav>
-<header class"top">
-</header>
+
+
 <body class="main_page">
-<div class="background" style="position: fixed; z-index: -99; width: 100%; height: 100%">
-
-<iframe id="ytplayer" type="text/html" width="100%" height="100%"
-  src="http://www.youtube.com/embed/G2lAevT97_4?autoplay=1&loop=1&playlist=Ts8yoDP_gG4"
-  frameborder="0" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true">
-
-</iframe>
-
-
-</div>
+  <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+    <iframe id="ytplayer" type="text/html" width="100%" height="100%"
+      src="http://www.youtube.com/embed/G2lAevT97_4?autoplay=1&loop=1&playlist=Ts8yoDP_gG4"
+      frameborder="0" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true">
+    </iframe>
+  </div>
 
   <h1>The Latest PWNs</h1>
 
