--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,16 @@
-<h1 class="show_user">WELCOME TO!</h1>
+<h1 class="show_user">WELCOME TO</h1>
 </br>
 <body class="main_page">
   <a class="home" href="/home">
     <img src="http://i.imgur.com/AQOszO0.jpg">
   </a>
   </br>
-<h2 class="guideline">Guidlines</h2>
+  <h2 class="guideline">Guidlines</h2>
 
-<div class="sum">Grab your best clips on the Xbox DVR website, and brag about your epic PWNge.
-Copy the URL from the video you want to show off. Now let's see those moments.
-Click the hub link to get started
-</div>
-
+  <div class="sum">Grab your best clips on the Xbox DVR website, and brag about your epic PWNge.
+    Copy the URL from the video you want to show off. Now let's see those moments.
+    Click the hub link above to get started.
+  </div>
 
 </body>
 
